--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "media-autobuild_suite"]
-	path = media-autobuild_suite
-	url = https://github.com/m-ab-s/media-autobuild_suite.git
+[submodule "ffmpeg-windows-build-helpers"]
+	path = ffmpeg-windows-build-helpers
+	url = https://github.com/rdp/ffmpeg-windows-build-helpers.git
