Compile ffmpeg shared

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,7 @@ jobs:
         working-directory: ffmpeg-windows-build-helpers
         run: |
           ./cross_compile_ffmpeg.sh -h
+          ./cross_compile_ffmpeg.sh --build-ffmpeg-shared=y --compiler-flavors=win64 -d
 
 #      - name: Create pre-compiled artifact
 #        shell: cmd
