macOS ffmpeg build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -211,3 +211,25 @@ jobs:
           allowUpdates: true
           body: |
             Prebuilt ffmpeg libs for sunshine
+
+  macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        # https://developer.apple.com/documentation/apple-silicon/building-a-universal-macos-binary#Update-the-Architecture-List-of-Custom-Makefiles
+        target:
+          - x86_64-apple-macos10.9
+          - arm64-apple-macos11
+    env:
+      TARGET: ${{ matrix.target }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: brew install yasm
+      - name: Build
+        run: ./build-macos.sh
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: ffmpeg-${{ matrix.target }}
+          path: artifacts/
